# movement-tracks-analyzer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PERFORMANCE.md  README.md  REFACTORING.md
.github/: AGENTS.md  copilot-instructions.md
.github/instructions/: language.instructions.md  rust.instructions.md
.github/skills/cli-development/: SKILL.md
.github/skills/kml-parsing/: SKILL.md
.github/skills/testing/: SKILL.md
docs/: BETTER_HIGHLIGHTS_CC_ANALYSIS.md
docs/analysis/: COGNITIVE_COMPLEXITY_REPORT.md  COMPLEXITY_ANALYSIS_INDEX.md  README.md
src/: cli.rs  config.rs  converter.rs  error.rs  format.rs  lib.rs  main.rs  metadata.rs  output.rs  parser.rs  path.rs  path_resolver.rs  regex.rs
tests/: kmz_parsing.rs
tests/fixtures/: empty.kmz  tracks.kml  tracks.kmz  tracks_no_doc.kmz
tools/: README.md  cognitive_complexity_analyzer.py  cognitive_complexity_analyzer.rs
