[package]
name = "movement_tracks_analyzer"
version = "0.1.0"
edition = "2024"

[lib]
name = "movement_tracks_analyzer"
path = "src/lib.rs"

[[bin]]
name = "movement_tracks_analyzer"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21"
quick-xml = { version = "0.39", features = ["serialize"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"
